267:fix/Hiding sidebar on mobile UI

--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -10,6 +10,7 @@
         max-width: 0;
         max-height: 0;
         height: 0;
-        overflow: 0;
+        overflow: hidden;
+        transform: scale(0);
     }
 }
